--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Kelley Cunningham: Heat Map</title>
   <link rel="stylesheet" href="./style.css">
-
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
 </head>
 <body>
 <!-- partial:index.partial.html -->
